<resources>
    <string name="app_name">CityTour</string>
    //titles
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    //buttons
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="Dashboard_heading">Get A Way</string>
    <string name="Restaurant">Restaurants</string>
    <string name="Education">Education</string>
    <string name="Shop">Shop</string>
    <string name="Hotels">Hotels</string>
    <string name="Search">Search</string>
    <string name="locations_logo">All featured locations</string>
    <string name="locations_desc">All the locations that are features and have top demands in town</string>
    <string name="most_viewed_location">Most Viewed Location</string>
    <string name="view_all">View All</string>
    <string name="title">TITLE</string>
    <string name="all_categories">All CATEGORIES</string>
    <string name="add_missing_palce">ADD MISSING PALCE</string>
    <string name="searchcaps">SEARCH</string>
    <string name="home">HOME</string>
    <string name="login">Login</string>
    <string name="profile">PROFILE</string>
    <string name="log_out">LOG OUT</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospital">Hospital</string>
</resources>
