<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".User.Categories">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageView
                android:id="@+id/categories_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons_back"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_search"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textColor="#000000"
            android:textSize="30sp"
            android:fontFamily="@font/acme"
            android:padding="15dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk2"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_rent"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/food_back"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_restaurant_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurant"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk3"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/hospital_image"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk5"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_shop_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shop"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk2"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_rent"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/food_back"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_restaurant_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurant"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk3"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/hospital_image"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_bk5"
            android:paddingBottom="10dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:src="@drawable/categories_shop_icon"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shop"
                android:textSize="30sp"
                android:fontFamily="@font/acme"
                android:textColor="#000000"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand  All"
                android:textSize="24sp"
                android:textColor="#000000"
                android:fontFamily="@font/antic"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>